--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,94 @@
-<p>agregar works!</p>
+<h1>
+    {{ ( heroe.id ) ? 'Editar' : 'Nuevo' }}
+    Héroe
+    <small>{{ heroe.superhero }}</small>
+</h1>
+
+<div fxLayout="row" 
+     fxLayoutGap="40px"
+     fxLayout.xs="column">
+
+    <div fxFlex=50 fxLayout="column">
+
+    <div fxLayout="row" 
+         fxLayoutGap="20px"
+         fxLayout.xs="column">
+        <mat-form-field fxFlex="100" fxLayout.xs="column">
+            <mat-label>Super Héroe</mat-label>
+            <input matInput
+                   [(ngModel)]="heroe.superhero"
+                   type="text"
+                   required>
+        </mat-form-field>
+
+        <mat-form-field fxFlex="100">
+            <mat-label>Alter ego</mat-label>
+            <input matInput
+                   [(ngModel)]="heroe.alter_ego"
+                   type="text"
+                   required>
+        </mat-form-field>
+    </div>
+
+    <mat-form-field>
+        <mat-label>Primera Aparición</mat-label>
+        <input matInput
+               [(ngModel)]="heroe.first_appearance"
+               type="text"
+               required>
+    </mat-form-field> 
+
+    <mat-form-field>
+        <mat-label>Personajes</mat-label>
+        <input matInput
+               [(ngModel)]="heroe.characters"
+               type="text"
+               required>
+    </mat-form-field>
+    
+    <mat-form-field>
+        <mat-label>Creador</mat-label>
+        <mat-select required
+                    [(ngModel)]="heroe.publisher">
+
+            <mat-option *ngFor="let publisher of publishers"
+                         [value] ="publisher.id"> 
+                         {{ publisher.desc }}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
+        <mat-label>Foto Url</mat-label>
+        <input matInput
+               [(ngModel)]="heroe.alt_img"
+               type="url"
+               required>
+    </mat-form-field>
+
+    <br>
+    <div fxLayout>
+    <button mat-raised-button 
+            color="primary"
+            (click)="guardar();">
+        <mat-icon>add</mat-icon>
+        {{ ( heroe.id ) ? 'Actualizar' : 'Crear' }}
+    </button>
+    <span class="spacer"></span>
+    
+        <button *ngIf="heroe.id"
+                mat-raised-button
+                (click)="borrarHeroe();"
+                color="warn">
+        <mat-icon>remove</mat-icon>
+            Borrar
+        </button>
+    </div>
+
+
+</div>
+    <div fxFlex="50">
+        <img [src]="heroe | imagen" >
+    </div>
+
+</div>
